--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Main Page</title>
+    <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
     <header>
       <!--logo başlangıc-->
       <a href="#">WEST STUDİO</a>
+      <!--logo bitis-->
+      <!--menu başlangıc-->
       <nav>
         <ul>
           <li><a href="#">Studio</a></li>
@@ -16,10 +19,13 @@
           <li><a href="#">Contact</a></li>
         </ul>
       </nav>
+      <!--menu bitti-->
+      <!--iletisim baslangıc-->
       <address>
         <a href="#">info@devstudio.com</a>
         <a href="#">+11(000)111-11-11</a>
       </address>
+      <!--iletisim bitti-->
     </header>
     <main>
       <section>
@@ -132,6 +138,7 @@
       <footer>
         <!--logo başlangıc-->
         <a href="#">WEST STUDİO</a>
+        <!--logo bitis-->
         <p>
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
