--- a/index.html
+++ b/index.html
@@ -4,12 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Main Page</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
     <header>
       <!--logo başlangıc-->
-      <a href="#">WEST STUDİO</a>
+      <div class="logo">
+        <span class="web">WEB</span><span class="Studio">STUDIO</span>
+      </div>
       <!--logo bitis-->
       <!--menu başlangıc-->
       <nav>
@@ -28,14 +34,14 @@
       <!--iletisim bitti-->
     </header>
     <main>
-      <section>
+      <section class="h1c">
         <h1>Effective Solutions for Your Business</h1>
         <button type="submit">Order Service</button>
       </section>
       <section>
         <ul>
           <li>
-            <h3>Strategy</h3>
+            <h3 class="h3h4">Strategy</h3>
             <p>
               Our goal is identify the business problem to walk away with the
               perfect and creative solution.
@@ -43,7 +49,7 @@
           </li>
 
           <li>
-            <h3>Punctuality</h3>
+            <h3 class="h3h4">Punctuality</h3>
             <p>
               Bring the key message to the brands audience for the best price
               within the shortest possible time.
@@ -51,7 +57,7 @@
           </li>
 
           <li>
-            <h3>Diligence</h3>
+            <h3 class="h3h4">Diligence</h3>
             <p>
               Research and confirm brands with the strongest digital growth
               opportunities and minimize risk.
@@ -59,7 +65,7 @@
           </li>
 
           <li>
-            <h3>Technologies</h3>
+            <h3 class="h3h4">Technologies</h3>
             <p>
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
@@ -68,29 +74,29 @@
         </ul>
       </section>
       <section>
-        <h2>Our Team</h2>
-        <ul>
-          <li>
+        <h2 class="ot">Our Team</h2>
+        <ul class="ot">
+          <li class="ot">
             <img src="images/img1.jpg" alt="Mark Guerrero" width="264" />
-            <h4>Mark Guerrero</h4>
+            <h4 class="h3h4">Mark Guerrero</h4>
             <p>Product Designer</p>
           </li>
 
-          <li>
+          <li class="ot">
             <img src="images/img2.jpg" alt="Tom Ford" width="264" />
-            <h4>Tom Ford</h4>
+            <h4 class="h3h4">Tom Ford</h4>
             <p>Frontend Developer</p>
           </li>
 
-          <li>
+          <li class="ot">
             <img src="images/img3.jpg" alt="Camila Garcia" width="264" />
-            <h4>Camila Garcia</h4>
+            <h4 class="h3h4">Camila Garcia</h4>
             <p>Marketing</p>
           </li>
 
-          <li>
+          <li class="ot">
             <img src="images/img4.jpg" alt="Daniel Wilson" width="264" />
-            <h4>Daniel Wilson</h4>
+            <h4 class="h3h4">Daniel Wilson</h4>
             <p>UI Designer</p>
           </li>
         </ul>
@@ -100,44 +106,46 @@
         <ul>
           <li>
             <img src="images/our1.jpg" alt="Banking App" width="360" />
-            <h4>Banking App</h4>
+            <h4 class="h3h4">Banking App</h4>
             <p>App</p>
           </li>
 
           <li>
             <img src="images/our2.jpg" alt="Cashless Payment" width="360" />
-            <h4>Cashless Payment</h4>
+            <h4 class="h3h4">Cashless Payment</h4>
             <p>Marketing</p>
           </li>
 
           <li>
             <img src="images/our3.jpg" alt="Meditation App" width="360" />
-            <h4>Meditation App</h4>
+            <h4 class="h3h4">Meditation App</h4>
             <p>App</p>
           </li>
 
           <li>
             <img src="images/our4.jpg" alt="Taxi Service" width="360" />
-            <h4>Taxi Service</h4>
+            <h4 class="h3h4">Taxi Service</h4>
             <p>Marketing</p>
           </li>
 
           <li>
             <img src="images/our5.jpg" alt="Screen Illustrations" width="360" />
-            <h4>Screen Illustrations</h4>
+            <h4 class="h3h4">Screen Illustrations</h4>
             <p>Design</p>
           </li>
 
           <li>
             <img src="images/our6.jpg" alt="Online Courses" width="360" />
-            <h4>Online Courses</h4>
+            <h4 class="h3h4">Online Courses</h4>
             <p>Marketing</p>
           </li>
         </ul>
       </section>
       <footer>
         <!--logo başlangıc-->
-        <a href="#">WEST STUDİO</a>
+        <div class="logo">
+          <span class="web">WEB</span><span class="Studio">STUDIO</span>
+        </div>
         <!--logo bitis-->
         <p>
           Increase the flow of customers and sales for your business with
