--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <!--logo bitis-->
       <!--menu başlangıc-->
       <nav>
-        <ul>
+        <ul class="li1">
           <li><a href="#">Studio</a></li>
           <li><a href="#">Portfolio</a></li>
           <li><a href="#">Contact</a></li>
@@ -141,13 +141,13 @@
           </li>
         </ul>
       </section>
-      <footer>
+      <footer class="ft">
         <!--logo başlangıc-->
-        <div class="logo">
-          <span class="web">WEB</span><span class="Studio">STUDIO</span>
+        <div class="logo1">
+          <span class="web">WEB</span><span class="Studio1">STUDIO</span>
         </div>
         <!--logo bitis-->
-        <p>
+        <p class="foot">
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
