--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
     />
-    <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
@@ -19,7 +19,7 @@
       <!--logo bitis-->
       <!--menu başlangıc-->
       <nav>
-        <ul class="li1">
+        <ul class="menu">
           <li><a href="#">Studio</a></li>
           <li><a href="#">Portfolio</a></li>
           <li><a href="#">Contact</a></li>
@@ -27,14 +27,14 @@
       </nav>
       <!--menu bitti-->
       <!--iletisim baslangıc-->
-      <address>
+      <address class="adres">
         <a href="#">info@devstudio.com</a>
         <a href="#">+11(000)111-11-11</a>
       </address>
       <!--iletisim bitti-->
     </header>
     <main>
-      <section class="h1c">
+      <section class="baslik">
         <h1>Effective Solutions for Your Business</h1>
         <button type="submit">Order Service</button>
       </section>
