--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <button type="submit">Order Service</button>
       </section>
       <section>
-        <ul>
+        <ul class="ozet">
           <li>
             <h3 class="h3h4">Strategy</h3>
             <p>
@@ -103,7 +103,7 @@
       </section>
       <section>
         <h2>Our Portfolio</h2>
-        <ul>
+        <ul class="ourport">
           <li>
             <img src="images/our1.jpg" alt="Banking App" width="360" />
             <h4 class="h3h4">Banking App</h4>
