--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <section>
         <ul class="ozet">
           <li>
-            <h3 class="h3h4">Strategy</h3>
+            <h3 class="ozet">Strategy</h3>
             <p>
               Our goal is identify the business problem to walk away with the
               perfect and creative solution.
@@ -49,7 +49,7 @@
           </li>
 
           <li>
-            <h3 class="h3h4">Punctuality</h3>
+            <h3 class="ozet">Punctuality</h3>
             <p>
               Bring the key message to the brands audience for the best price
               within the shortest possible time.
@@ -57,7 +57,7 @@
           </li>
 
           <li>
-            <h3 class="h3h4">Diligence</h3>
+            <h3 class="ozet">Diligence</h3>
             <p>
               Research and confirm brands with the strongest digital growth
               opportunities and minimize risk.
@@ -65,7 +65,7 @@
           </li>
 
           <li>
-            <h3 class="h3h4">Technologies</h3>
+            <h3 class="ozet">Technologies</h3>
             <p>
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
@@ -78,25 +78,25 @@
         <ul class="ot">
           <li class="ot">
             <img src="images/img1.jpg" alt="Mark Guerrero" width="264" />
-            <h4 class="h3h4">Mark Guerrero</h4>
+            <h4 class="ozet">Mark Guerrero</h4>
             <p>Product Designer</p>
           </li>
 
           <li class="ot">
             <img src="images/img2.jpg" alt="Tom Ford" width="264" />
-            <h4 class="h3h4">Tom Ford</h4>
+            <h4 class="ozet">Tom Ford</h4>
             <p>Frontend Developer</p>
           </li>
 
           <li class="ot">
             <img src="images/img3.jpg" alt="Camila Garcia" width="264" />
-            <h4 class="h3h4">Camila Garcia</h4>
+            <h4 class="ozet">Camila Garcia</h4>
             <p>Marketing</p>
           </li>
 
           <li class="ot">
             <img src="images/img4.jpg" alt="Daniel Wilson" width="264" />
-            <h4 class="h3h4">Daniel Wilson</h4>
+            <h4 class="ozet">Daniel Wilson</h4>
             <p>UI Designer</p>
           </li>
         </ul>
@@ -106,37 +106,37 @@
         <ul class="ourport">
           <li>
             <img src="images/our1.jpg" alt="Banking App" width="360" />
-            <h4 class="h3h4">Banking App</h4>
+            <h4 class="ozet">Banking App</h4>
             <p>App</p>
           </li>
 
           <li>
             <img src="images/our2.jpg" alt="Cashless Payment" width="360" />
-            <h4 class="h3h4">Cashless Payment</h4>
+            <h4 class="ozet">Cashless Payment</h4>
             <p>Marketing</p>
           </li>
 
           <li>
             <img src="images/our3.jpg" alt="Meditation App" width="360" />
-            <h4 class="h3h4">Meditation App</h4>
+            <h4 class="ozet">Meditation App</h4>
             <p>App</p>
           </li>
 
           <li>
             <img src="images/our4.jpg" alt="Taxi Service" width="360" />
-            <h4 class="h3h4">Taxi Service</h4>
+            <h4 class="ozet">Taxi Service</h4>
             <p>Marketing</p>
           </li>
 
           <li>
             <img src="images/our5.jpg" alt="Screen Illustrations" width="360" />
-            <h4 class="h3h4">Screen Illustrations</h4>
+            <h4 class="ozet">Screen Illustrations</h4>
             <p>Design</p>
           </li>
 
           <li>
             <img src="images/our6.jpg" alt="Online Courses" width="360" />
-            <h4 class="h3h4">Online Courses</h4>
+            <h4 class="ozet">Online Courses</h4>
             <p>Marketing</p>
           </li>
         </ul>
