--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
         </ul>
       </section>
       <section>
-        <h2 class="ot">Our Team</h2>
-        <ul class="ot">
+        <h2 class="ourteam">Our Team</h2>
+        <ul class="ourteam">
           <li class="ot">
             <img src="images/img1.jpg" alt="Mark Guerrero" width="264" />
             <h4 class="ozet">Mark Guerrero</h4>
