--- a/index.html
+++ b/index.html
@@ -104,39 +104,39 @@
       <section>
         <h2>Our Portfolio</h2>
         <ul class="ourport">
-          <li>
+          <li class="border">
             <img src="images/our1.jpg" alt="Banking App" width="360" />
-            <h4 class="ozet">Banking App</h4>
+            <h4 class="ozellik">Banking App</h4>
             <p>App</p>
           </li>
 
-          <li>
+          <li class="border">
             <img src="images/our2.jpg" alt="Cashless Payment" width="360" />
-            <h4 class="ozet">Cashless Payment</h4>
+            <h4 class="ozellik">Cashless Payment</h4>
             <p>Marketing</p>
           </li>
 
-          <li>
+          <li class="border">
             <img src="images/our3.jpg" alt="Meditation App" width="360" />
-            <h4 class="ozet">Meditation App</h4>
+            <h4 class="ozellik">Meditation App</h4>
             <p>App</p>
           </li>
 
-          <li>
+          <li class="border">
             <img src="images/our4.jpg" alt="Taxi Service" width="360" />
-            <h4 class="ozet">Taxi Service</h4>
+            <h4 class="ozellik">Taxi Service</h4>
             <p>Marketing</p>
           </li>
 
-          <li>
+          <li class="border">
             <img src="images/our5.jpg" alt="Screen Illustrations" width="360" />
-            <h4 class="ozet">Screen Illustrations</h4>
+            <h4 class="ozellik">Screen Illustrations</h4>
             <p>Design</p>
           </li>
 
-          <li>
+          <li class="border">
             <img src="images/our6.jpg" alt="Online Courses" width="360" />
-            <h4 class="ozet">Online Courses</h4>
+            <h4 class="ozellik">Online Courses</h4>
             <p>Marketing</p>
           </li>
         </ul>
